tests/invalid_make_int/unicode_2.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module unicode_2.

:- interface.

:- type '\UFFFFFFFF' == int.
